# ome-zarr-converters-tools

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  _typos.toml  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
docs/: advanced_tutorial.ipynb  api.md  converters_as_fractal_tasks.md  hcs_tutorial.ipynb  images_tutorial.ipynb  index.md  pipeline.md  tutorial.ipynb
examples/hcs_plate/: README.md  acquision_details.toml  acquisition_details.toml  tiles.csv
examples/single_acquisitions/: README.md  acquisition_details.toml  tiles.csv
src/debug/: plotting.py
src/fractal_converters_tools/: _omezarr_image_writers.py  _tiled_image.py
src/ome_zarr_converters_tools/: __init__.py  _grid_utils.py  _omezarr_image_writers.py  _omezarr_plate_writers.py  _pkl_utils.py  _stitching.py  _task_compute_tools.py  _task_init_tools.py  _tiled_image.py  table_to_tiled_images.py  tiled_image_to_ome_zarr.py
src/ome_zarr_converters_tools/api/: __init__.py  table_to_tiled_images.py  table_utils.py  tiled_image_creation_pipeline.py  tiled_image_to_ome_zarr.py  tiles_preprocessing_pipeline.py
src/ome_zarr_converters_tools/collection_setup/: __init__.py  _plate_setup.py  _setup_collection.py
src/ome_zarr_converters_tools/core/: __init__.py  _dask_lazy_loader.py  _dummy_tiles.py  _roi_utils.py  _table.py  _tile.py  _tile_region.py  _tile_to_tiled_images.py
src/ome_zarr_converters_tools/filters/: __init__.py  _filter_pipeline.py
src/ome_zarr_converters_tools/fractal/: __init__.py  _compute_task.py  _init_task.py  _json_utils.py  _models.py
src/ome_zarr_converters_tools/models/: __init__.py  _acquisition.py  _collection.py  _converter_options.py  _loader.py  _roi_utils.py  _roi_v2.py  _tile.py  _tile_region.py  _url_utils.py
src/ome_zarr_converters_tools/pipelines/: __init__.py  _alignment.py  _collection_setup.py  _filters.py  _registration_pipeline.py  _snap_utils.py  _tiled_image_creation_pipeline.py  _tiles_aggregation_pipeline.py  _tiling.py  _to_zarr.py  _validators.py  _write_ome_zarr.py
src/ome_zarr_converters_tools/registration/: __init__.py  _registration_pipeline.py
src/ome_zarr_converters_tools/registration/func/: __init__.py  _allignment.py  _snap_to_grid.py  _snap_utils.py  _tiling.py
src/ome_zarr_converters_tools/tools/: __init__.py  plotting.py  table_to_tiled_images.py  tile_to_tiled_images.py  tiled_image_to_ome_zarr.py
src/ome_zarr_converters_tools/utils/: __init__.py  _allignment.py  _plotting.py  _registration_pipeline.py  _roi_utils.py  _tile_to_tiled_images.py  _tiling.py  _write_images.py  _write_ome_zarr.py
src/ome_zarr_converters_tools/v1/: __init__.py  _grid_utils.py  _microplate_utils.py  _omezarr_image_writers.py  _omezarr_plate_writers.py  _pkl_utils.py  _stitching.py  _task_common_models.py  _task_compute_tools.py  _task_init_tools.py  _tile.py  _tiled_image.py
src/ome_zarr_converters_tools/validators/: __init__.py  _validator_pipeline.py
tests/: conftest.py  test_compute_tools.py  test_dummy.py  test_image_writers.py  test_init_tools.py  test_microplate_utils.py  test_plate_writers.py  test_stitching.py  test_tile.py  utils.py
tests/hiPSC_Tiny/: tiles.csv
tests/integration/: conftest.py  test_pipelines.py
tests/unit/: conftest.py  test_collection_setup.py  test_compute_task.py  test_core.py  test_filters.py  test_fractal_models.py  test_init_task.py  test_json_utils.py  test_loader.py  test_models.py  test_registration.py  test_registration_pipeline.py  test_roi_utils.py  test_table.py  test_to_zarr.py  test_utils.py  test_validators.py  test_write_ome_zarr.py
tests/v1_legacy/: conftest.py  test_compute_tools.py  test_microplate_utils.py  utils.py
